// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientUni should render as exepcted 1`] = `
<BrowserRouter
  data="someData!"
  routes={
    Array [
      "someRoute",
    ]
  }
>
  <withRouter(Uni)
    initialData="someData!"
    routes={
      Array [
        "someRoute",
      ]
    }
  />
</BrowserRouter>
`;

exports[`ServerUni no passed routerContext should render as exepcted 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  data="somePassedData"
  location="someUrl"
  routes={
    Array [
      "someRoute",
    ]
  }
>
  <withRouter(Uni)
    initialData="somePassedData"
    routes={
      Array [
        "someRoute",
      ]
    }
  />
</StaticRouter>
`;

exports[`ServerUni should render as exepcted 1`] = `
<StaticRouter
  basename=""
  context={
    Object {
      "context": "someRouterContext",
    }
  }
  data="somePassedData"
  location="someUrl"
  routes={
    Array [
      "someRoute",
    ]
  }
>
  <withRouter(Uni)
    initialData="somePassedData"
    routes={
      Array [
        "someRoute",
      ]
    }
  />
</StaticRouter>
`;
